css/style.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

:root {
    --gradient: linear-gradient(90deg, #852170, #CF414B)
}

body {
    font-family: "Poppins", serif;
    font-size: 20px;
    background: var(--gradient);
}

main {
    margin: 120px auto 0;
}

ul {
    list-style: none;
    padding: 0;
}

/* =========================== Common Css End ====================== */

/* ============================== Left part =====================*/
.trashMain {
    border: 1px solid rgba(241, 241, 241, 0.3);
    -webkit-border-radius: 15px;
    -moz-border-radius: 15px;
    -ms-border-radius: 15px;
    -o-border-radius: 15px;
    border-radius: 15px;
    padding: 24px 0 0 24px;
    height: 100%;
}

.trashMain h2 {
    font-size: 22px;
    font-weight: 700;
    color: #D9D9D9;
    border-bottom: 1px solid rgba(241, 241, 241, 0.5);
    padding-bottom: 10px;
    margin-bottom: 40px;
}

.trashMain ul {
    height: 464px;
    padding-right: 24px;
    overflow-y: auto;
}

.trashMain ul li {
    display: flex;
    justify-content: space-between;
    align-items: center;
    color: #bbbbbb;
    padding: 10px 0;
}

.trashMain ul li span {
    width: 9%;
    display: flex;
    justify-content: space-between;
}

.trashMain ul li span i {
    font-style: 26px;
    color: #bbbbbb;

}

/* ============================== Right part ===================== */

.taskMain {
    width: 648px;
}

.inputTask input {
    width: 80%;
    padding: 10px 24px;
    border: none;
    -webkit-border-radius: 10px;
    -moz-border-radius: 10px;
    -ms-border-radius: 10px;
    -o-border-radius: 10px;
    border-radius: 10px;
}

.inputTask button {
    padding: 10px 24px;
    border: none;
    -webkit-border-radius: 10px;
    -moz-border-radius: 10px;
    -ms-border-radius: 10px;
    -o-border-radius: 10px;
    border-radius: 10px;
    font-weight: 600;
    color: #CF414B;
    background: #bbbbb;
}

.taskBox {
    background: #f1f1f1;
    -webkit-border-radius: 10px;
    -moz-border-radius: 10px;
    -ms-border-radius: 10px;
    -o-border-radius: 10px;
    border-radius: 10px;
    height: 512px;
    padding: 24px 0 0 24px;
}

.taskBox h2 {
    font-size: 22px;
    font-weight: 700;
    background: var(--gradient);
    -webkit-background-clip: text;
    background-clip: text;
    color: transparent;
    border-bottom: 1px solid #852170;
    padding-bottom: 10px;
    margin-bottom: 24px;
}

.taskBox ul {
    height: 414px;
    padding-right: 24px;
    overflow-y: auto;
}

.taskBox ul li {
    display: flex;
    justify-content: space-between;
    align-items: center;
    color: #1e1e1e;
    padding: 10px 0;
}

.taskBox ul li span {
    width: 9%;
    display: flex;
    justify-content: space-between;
}

.taskBox ul li span i {
    font-style: 26px;
    background: var(--gradient);
    -webkit-background-clip: text;
    background-clip: text;
    color: transparent;

}

